update Producer